--- a/frontend/youtube-clone-ui/src/app/save-video-details/save-video-details.component.html
+++ b/frontend/youtube-clone-ui/src/app/save-video-details/save-video-details.component.html
@@ -48,14 +48,39 @@
                     </mat-chip-grid>
                   </mat-form-field>                
             </div>
+            <div>
+                <label for="inputGroupFile01">Upload Thumbnail:
+                    <div class="custom-file">
+                        <input type="file" class="custom-file-input" 
+                        id="inputGroupFile01" aria-describedby="inputGroupFileAddon01" (change)="onFileSelected($event)">
+                    </div>
+                    <br />
+                    <div *ngIf="fileSelected"> 
+                        <div>
+                            <p>Selected file: {{selectedFileName}}</p>
+                        </div>
+                        <hr>
+                        <div *ngIf="fileSelected">
+                            <button mat-raised-button color="primary" type="submit" (click)="onUpload()">Upload</button>
+                        </div>
+
+                    </div>
+                    
+                </label>           
+            </div>
+            <br />
 
             <div>
                 <button type="submit" mat-raised-button color="primary">Save</button>
-            </div>            
+            </div> 
+           
+            
         </form>
     </span>
 
-    <span class="fx-flex--30">Video Player</span>
+    <span class="fx-flex--30">
+        <app-video-player></app-video-player>
+    </span>
 
     <span class="fx-flex--20">Hi</span>
 
