--- a/frontend/youtube-clone-ui/src/app/header/header.component.html
+++ b/frontend/youtube-clone-ui/src/app/header/header.component.html
@@ -9,7 +9,7 @@
         <mat-icon>account_circle</mat-icon>
       </button>
       <ng-template #noAuth>
-        <button mat-raised-button (click)="loginWithRedirect()">Login</button>
+        <button mat-raised-button (click)="login()">Login</button>
       </ng-template>
       <button mat-raised-button (click)="logout()">Logout</button>
       
